# EncryptedTerminalChat

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
echat/: peer.py
