[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "echat"
version = "0.1.0"
description = "End-to-end encrypted terminal chat using Diffie-Hellman key exchange and AES encryption"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your@email.com"}
]
keywords = ["chat", "encryption", "terminal", "networking", "security", "diffie-hellman", "aes"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Security :: Cryptography",
]

dependencies = [
    "cryptography>=41.0.0",
]

[project.scripts]
echat = "echat.peer:main"

[project.urls]
Homepage = "https://github.com/yourusername/echat"
Repository = "https://github.com/yourusername/echat"
Issues = "https://github.com/yourusername/echat/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["echat*"]

